src/objects/ActivityRefAccount__c.object
<CustomObject>
    <fields>
        <fullName>AccountMainRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先(主）</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountMainRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountSubRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>活動関連取引先 (取引先)</relationshipLabel>
        <relationshipName>AccountSubRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectDetailRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プロジェクト明細</label>
        <referenceTo>ProjectDetail__c</referenceTo>
        <relationshipLabel>活動関連取引先</relationshipLabel>
        <relationshipName>refProjectDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationIdRefCal__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+RelationIdRef__c ,  RelationIdRefName__c )</formula>
        <label>活動リンク</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationIdRefName__c</fullName>
        <label>件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationIdRef__c</fullName>
        <externalId>true</externalId>
        <label>活動ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>活動関連取引先</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountSubRef__c</columns>
        <columns>AccountMainRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>TR-{0000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>